--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "scripts": {
         "editorconfig": "editorconfig-cli",
-        "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+        "stylelint": "stylelint \"src/sass/**/*.scss\" --syntax scss",
         "lint": "npm run editorconfig && npm run stylelint",
         "build": "gulp build",
         "start": "gulp",
@@ -40,10 +40,10 @@
     "editorconfig-cli": [
         "*.json",
         "*.js",
-        "source/*.html",
-        "source/js/**/*.js",
-        "source/img/**/*.svg",
-        "source/sass/**/*.scss"
+        "src/*.html",
+        "src/js/**/*.js",
+        "src/img/**/*.svg",
+        "src/sass/**/*.scss"
     ],
     "engines": {
         "node": "^16"
